--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@types/geolib": "^2.0.23",
     "@types/lodash": "^4.14.170",
     "@types/mongoose": "^5.11.97",
+    "@types/request-promise": "^4.1.47",
     "geolib": "^3.3.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.0",
-    "node-telegram-bot-api": "^0.53.0"
+    "node-telegram-bot-api": "^0.53.0",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "@types/node": "^15.12.5",
