--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/node": "^15.12.5",
     "@types/node-telegram-bot-api": "^0.51.1",
+    "node-ssh": "^11.1.1",
     "nodemon": "^2.0.7",
     "ts-node-dev": "^1.1.6",
     "tslint": "^6.1.3",
