--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node --inspect=5858 -r ts-node/register ./src/app.ts",
     "start:watch": "nodemon",
     "build": "tsc",
-    "git-pull-main": "git pull --rebase upstream main"
+    "deploy": "node ./deploy/deploy",
+    "git-pull-main": "git pull --rebase upstream main",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -31,10 +33,15 @@
     "request-promise": "^4.2.6"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/node": "^15.12.5",
     "@types/node-telegram-bot-api": "^0.51.1",
+    "@types/source-map-support": "^0.5.4",
+    "jest": "^27.0.6",
     "node-ssh": "^11.1.1",
     "nodemon": "^2.0.7",
+    "source-map-support": "^0.5.19",
+    "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.6",
     "tslint": "^6.1.3",
     "typescript": "^4.3.4"
@@ -48,6 +55,7 @@
       "src"
     ],
     "exec": "npm start",
-    "ext": "ts"
+    "ext": "ts",
+    "delay": 3000
   }
 }
